--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "study-first",
   "version": "1.0.0",
   "description": "project for improving some skills of development",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack"
@@ -13,12 +13,14 @@
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/node": "^18.14.6",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.8.4",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
