--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack"
+    "start": "PORT=3000 MODE=development webpack serve",
+    "build:dev": "MODE=development webpack",
+    "build:prod": "MODE=production webpack"
   },
   "author": "Aleksandr Avdeev",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv-webpack": "^7.0.3",
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/node": "^18.14.6",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-server": "^4.7.2",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.8.4",
     "ts-loader": "^9.4.2",
