--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2"
