--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Aleksandr Avdeev",
   "license": "ISC",
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/node": "^18.14.6",
