--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "classnames": "^2.3.2",
+    "i18next": "^22.4.12",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-router-dom": "^6.8.2"
   }
 }
