--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.13",
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
