--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "PORT=3000 MODE=development webpack serve",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
+    "stylelint:fix": "npx stylelint \"**/*.scss\" --fix",
     "build:dev": "MODE=development webpack",
     "build:prod": "webpack --mode production"
   },
@@ -35,6 +36,10 @@
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^15.3.0",
+    "stylelint-config-standard": "^31.0.0",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-order": "^6.0.3",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
