--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "project for improving some skills of development",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config ./config/jest/jest.config.js",
     "start": "PORT=3000 MODE=development webpack serve",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
@@ -18,6 +18,7 @@
     "@svgr/webpack": "^6.5.1",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/html-webpack-plugin": "^3.2.6",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -30,6 +31,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.8.4",
     "resolve-url-loader": "^5.0.0",
@@ -40,6 +43,7 @@
     "stylelint-config-standard": "^31.0.0",
     "stylelint-config-standard-scss": "^7.0.1",
     "stylelint-order": "^6.0.3",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
