--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "stylelint:fix": "npx stylelint \"**/*.scss\" --fix",
     "build:dev": "MODE=development webpack",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "storybook": "start-storybook -p 6006 -c ./config/storybook",
+    "build-storybook": "build-storybook -c ./config/storybook"
   },
   "author": "Aleksandr Avdeev",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -23,6 +34,7 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "babel-loader": "^8.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
