--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:dev": "MODE=development webpack",
     "build:prod": "webpack --mode production",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "build-storybook": "build-storybook -c ./config/storybook"
+    "build-storybook": "build-storybook -c ./config/storybook",
+    "test:loki": "loki test"
   },
   "author": "Aleksandr Avdeev",
   "license": "ISC",
@@ -48,6 +49,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "loki": "0.28.1",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.8.4",
     "resolve-url-loader": "^5.0.0",
@@ -81,5 +83,20 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-router-dom": "^6.8.2"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
