--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.0",
@@ -50,7 +52,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.2",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.7",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
