--- a/config/envs/.dev.env
+++ b/config/envs/.dev.env
@@ -1,4 +1,1 @@
-# api urls and etc
-API_URL=www.rosdosd.sdsdso/fsfodf
-API_URL_2=www.rosdosd.sdsdso/fsfodf122222222222222
-API_URL_3=www.rosdosd.sdsdso/fsfodf33333333333
+IS_DEV=true
