--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.ts",
   "scripts": {
     "test": "jest --config ./config/jest/jest.config.js",
-    "start": "PORT=3000 MODE=development webpack serve",
+    "start": "PORT=3000 MODE=development webpack serve --mode=development",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "stylelint": "stylelint \"**/*.scss\"",
     "stylelint:fix": "stylelint \"**/*.scss\" --fix",
-    "build:dev": "MODE=development webpack",
+    "build:dev": "MODE=development webpack --mode=development",
     "build:prod": "webpack --mode production",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook"
@@ -74,6 +74,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -84,6 +85,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2"
   }
 }
