--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:dev": "MODE=development webpack --mode=development",
     "build:prod": "webpack --mode production",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "storybook:build": "build-storybook -c ./config/storybook"
+    "storybook:build": "build-storybook -c ./config/storybook",
+    "prepare": "husky install"
   },
   "author": "Aleksandr Avdeev",
   "license": "ISC",
@@ -49,6 +50,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
