--- a/package.json
+++ b/package.json
@@ -77,12 +77,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.0.1",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/yup": "^0.32.0",
     "classnames": "^2.3.2",
     "i18next": "^22.4.12",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -92,6 +94,7 @@
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "yup": "^1.0.2"
   }
 }
