--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "json-server": "^0.17.3",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.8.7",
