--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.14.6",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-loader": "^8.3.0",
@@ -72,6 +73,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
