add concurrently util

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --config ./config/jest/jest.config.js --runInBand",
     "start": "PORT=3000 MODE=development webpack serve --mode=development",
     "server:dev": "node ./json-server/index.js",
+    "start:dev": "concurrently \"npm:start\" \"npm:server:dev\"",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "stylelint": "stylelint \"**/*.scss\"",
@@ -40,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-loader": "^8.3.0",
+    "concurrently": "^8.0.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
