--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.1",
     "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/classnames": "^2.3.1",
