--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "sourceMap": true,
     "noImplicitAny": true,
     "module": "ESNext",
     "target": "es5",
@@ -20,7 +21,7 @@
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS",
-      "strictNullChecks": true
+      "strictNullChecks": true,
     }
   },
 }
